// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User profile manage controls test (is a contact) Basic render test 1`] = `
<div
  className="contact profile-manage-controls"
>
  <button
    className="flyout-trigger message-button-flyout flyout-closed nti-button button primary medium pv-md ph-xl"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <div
      data-button-label={true}
    >
      <span />
      <span>
        Message
      </span>
    </div>
  </button>
  <button
    className="unfollow nti-button button primary medium pv-md ph-xl"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="content"
      data-button-label={true}
    >
      <i
        className="icon-unfollow"
      />
      <span>
        Unfollow
      </span>
    </div>
  </button>
</div>
`;

exports[`User profile manage controls test (is not a contact) Basic render test 1`] = `
<div
  className="non-contact profile-manage-controls"
>
  <button
    className="follow nti-button button primary medium pv-md ph-xl"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="content"
      data-button-label={true}
    >
      <i
        className="icon-addfriend"
      />
      <span>
        Follow
      </span>
    </div>
  </button>
</div>
`;
